# UITestFW

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  backend.cpp  install.sh  main.cpp  platforminfo.cpp  platforminfo.h
backend/: CMakeLists.txt  backend.cpp  backend.h  debuglogger.cpp  fontpolicy.cpp  pagemonitor.cpp  platforminfo.cpp  renderingmonitor.cpp  renderquality.cpp  runtimeevents.cpp  svgmanager.cpp  svgmanager.h  viewmodelregistry.cpp  viewmodelregistry.h
backend/fonts/: fontpolicy.cpp  fontpolicy.h
backend/graphics/: svgmanager.cpp
backend/io/: backend.cpp  backend.h
backend/navigation/: pagemonitor.cpp  pagemonitor.h  viewstatetracker.cpp  viewstatetracker.h
backend/platform/: nativewindowstyle.cpp  nativewindowstyle.h  nativewindowstyle.mm  platforminfo.cpp  platforminfo.h
backend/runtime/: appbootstrap.cpp  appbootstrap.h  appentry.cpp  appentry.h  debuglogger.cpp  debuglogger.h  renderingmonitor.cpp  renderingmonitor.h  renderquality.cpp  renderquality.h  runtimeevents.cpp  runtimeevents.h  vulkanbootstrap.cpp  vulkanbootstrap.h
backend/state/: appstate.cpp  appstate.h  appstate_macros.h  viewmodelregistry.cpp  viewmodelregistry.h
backend/text/: textmarkup.cpp  textmarkup.h
cmake/: LVRSAppEntryPoint.cpp.in  LVRSBootstrapAction.cmake  LVRSBootstrapExportAction.cmake  LVRSBootstrapFrameworkAction.cmake  LVRSBootstrapWasmLaunchAction.cmake  LVRSConfig.cmake.in  LVRSConfigRoot.cmake.in  LVRSConfigVersionRoot.cmake.in  LVRSHelpers.cmake  LVRSTargetsStatic.cmake.in  UIFrameworkConfig.cmake.in
docs/: README.md  build.md  mvvm.md  overview.md  theme.md
docs/architecture/: event-pipeline.md  rendering-backend.md
docs/backend/: AppBootstrap.md  Backend.md  Debug.md  DebugOutput.md  PageMonitor.md  Platform.md  RenderMonitor.md  RenderQuality.md  RuntimeEvents.md  ViewModels.md  ViewStateTracker.md
docs/components/app/: AppShell.md  ApplicationWindow.md
docs/components/control/: AbstractButton.md  CheckBox.md  CodeEditor.md  DrawerButton.md  EventListener.md  EventListner.md  IconButton.md  IconMenuButton.md  InputField.md  InputMethodGuard.md  Label.md  LabelButton.md  LabelMenuButton.md  ProgressBar.md  RadioButton.md  TextEditor.md  ToggleButton.md  ToggleSwitch.md  WheelScrollGuard.md
docs/components/layout/: AppHeader.md  AppScaffold.md  HStack.md  Spacer.md  VStack.md  ZStack.md
docs/components/navigation/: ContextMenu.md  Hierarchy.md  Link.md  LinkWrapper.md  NavigationLink.md  Navigator.md  PageRouter.md
docs/components/surfaces/: Alert.md  AppCard.md
docs/policies/: debug.md  event.md  routing.md
example/: CMakeLists.txt  run-eventlistener.command  run-mvvm.command  run-typing-practice.command  run-visual-catalog.command
example/AndroidHello/: CMakeLists.txt  README.md  main.cpp
example/AndroidHello/qml/: Main.qml
example/EventListener/: BasicClick.qml  CMakeLists.txt  HoverCard.qml  KeyPress.qml  Main.qml  MultiTrigger.qml  PressRelease.qml  README.md  RightClick.qml  main.cpp
example/TypingPractice/: CMakeLists.txt  README.md  main.cpp
example/TypingPractice/qml/: Main.qml
example/VisualCatalog/: CMakeLists.txt  README.md  main.cpp
example/VisualCatalog/qml/: Main.qml
example/iOSHello/: CMakeLists.txt  README.md  main.cpp
example/iOSHello/qml/: Main.qml
example/mvvm/: CMakeLists.txt  README.md  main.cpp
example/mvvm/backend/: ExampleBootstrap.cpp  ExampleBootstrap.h  ExampleModel.cpp  ExampleModel.h  ExampleViewModel.cpp  ExampleViewModel.h
example/mvvm/qml/: Main.qml
qml/: AppShell.qml  ApplicationWindow.qml  CMakeLists.txt  Main.qml  Theme.qml  Window.qml
qml/components/: AppCard.qml  AppHeader.qml  AppScaffold.qml  CMakeLists.txt
qml/components/buttons/: AbstractButton.qml  CMakeLists.txt  DrawerButton.qml
qml/components/control/: AbstractButton.qml  CMakeLists.txt  CheckBox.qml  DrawerButton.qml  EventListner.qml  IconButton.qml  Label.qml  LabelButton.qml  ToggleButton.qml  ToggleSwitch.qml
qml/components/control/buttons/: AbstractButton.qml  CMakeLists.txt  IconButton.qml  IconMenuButton.qml  LabelButton.qml  LabelMenuButton.qml
qml/components/control/check/: CMakeLists.txt  CheckBox.qml  RadioButton.qml  ToggleSwitch.qml
qml/components/control/display/: CMakeLists.txt  Label.qml  ProgressBar.qml
qml/components/control/input/: AbstractInputBar.qml  CMakeLists.txt  CodeEditor.qml  InputField.qml  TextEditor.qml
qml/components/control/util/: CMakeLists.txt  EventListener.qml  EventListner.qml  InputMethodGuard.qml  WheelScrollGuard.qml
qml/components/layout/: AppHeader.qml  AppScaffold.qml  CMakeLists.txt  HStack.qml  Spacer.qml  VStack.qml  ZStack.qml
qml/components/navigation/: CMakeLists.txt  ContextMenu.qml  Hierarchy.qml  HierarchyItem.qml  HierarchyList.qml  HierarchyToolbar.qml  Link.qml  LinkWrapper.qml  List.qml  ListItem.qml  ListToolbar.qml  MenuDivider.qml  MenuItem.qml  NavigationLink.qml  Navigator.qml  PageRouter.qml  ToolbarButton.qml
qml/components/surfaces/: Alert.qml  AlertButton.qml  AppCard.qml  CMakeLists.txt
tests/: CMakeLists.txt  test_utils.h  tst_app_state.cpp  tst_backend_io.cpp  tst_code_editor.cpp  tst_debug.cpp  tst_eventlistener.cpp  tst_eventlistner.cpp  tst_examples.cpp  tst_font_policy.cpp  tst_import_api.cpp  tst_layout.cpp  tst_metrics_coverage.cpp  tst_navigation_state.cpp  tst_page_router.cpp  tst_platform_integration.cpp  tst_render_quality.cpp  tst_runtime_services.cpp  tst_runtimeevents.cpp  tst_svg_manager.cpp  tst_text_editor.cpp  tst_text_markup.cpp
