option(LVRS_BUILD_LEGACY_EXAMPLES "Build legacy desktop example apps" ON)

if(CMAKE_SYSTEM_NAME STREQUAL "iOS")
    add_subdirectory(iOSHello)
elseif(CMAKE_SYSTEM_NAME STREQUAL "Android")
    add_subdirectory(AndroidHello)
else()
    if(LVRS_BUILD_LEGACY_EXAMPLES)
        add_subdirectory(VisualCatalog)
        add_subdirectory(EventListener)
        add_subdirectory(mvvm)
        add_subdirectory(TypingPractice)
    endif()
    add_subdirectory(iOSHello)
    add_subdirectory(AndroidHello)
endif()
